# BPMtoFPS

./: .gitignore  Conversion Functions Documentation.md  README.md  codecov.yml  main.py  pyproject.toml  requirements.txt
.github/workflows/: python-app.yml  python-test-artifact.yml  release-workflow.yml  release_workflow.yml
BPMtoFPS/: __init__.py  __init__.pyi  cli.py  cli.pyi  constants.py  constants.pyi  converters.py  converters.pyi  main.py  main.pyi  models.py  setup.py  validation.py  validation.pyi
docs/: CLI.md  Functions.md
tests/: module_test.py  test_cli.py  test_module.py
