[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "BPMtoFPS"
version = "1.4.0"
authors = [
  { name="Jeff Heller (JHGFD)", email="jeffheller@jhgfd.com" },
]
description = "Convert time in a musical composition to time in a video production."
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
    "Topic :: Multimedia :: Sound/Audio",
    "Topic :: Multimedia :: Video"
]

[project.entry-points."console_scripts"]
BPMtoFPS = "BPMtoFPS.cli:main"

[tool.setuptools.packages.find]
exclude = ["test_env*", "Prior Versions*", "docs*", "*.egg-info*"]

[project.urls]
Homepage = "https://github.com/JHGFD82/BPMtoFPS"
Issues = "https://github.com/JHGFD82/BPMtoFPS/issues"